# biofeeder-comunicacion-server

./: .gitignore  Cargo.toml  check-comm-status.sh  communication.service  db-config.ini
src/: communication.rs  db.rs  device.rs  main.rs  message.rs  protocols.rs  vars.rs
