[package]
name = "biofeeder-comunicacion-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.11.1"
configparser = "3.0.0"
postgres = {version = "0.19.3", features = ["with-chrono-0_4"]}
chrono = "0.4.19"
hex = "0.4.3"
simple-logging = "2.0.2"
log = "0.4.16"
to-binary = "0.4.0"
postgres-native-tls = "0.5.0"
native-tls = "0.2.10"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
